# hf-workflow

./: .env.example  .gitignore  README.md  package.json
skills/seo/: AGENTS.md  NOTES.md  README.md  SKILL.md  pyproject.toml
skills/seo/config/: default-policy.yml
skills/seo/examples/: input-manifest.yaml
skills/seo/reports/: dataset-quality-review.md  gold-label-review-worksheet.md  internal-hfkrew-31-sample-audit.json  internal-hfkrew-31-sample-audit.md  latest-seo-test-audit.md  logic-improvement-proposal.md  policy-config-implementation-result.md  pr-ready-summary.md  render-signal-audit.md  semantic-metadata-methodology-simulation.md  skill-improvement-proposal.md  skill-improvement-simulation.json  skill-improvement-simulation.md
skills/seo/tests/: conftest.py  test_backward_compatibility.py  test_checkers_content.py  test_checkers_images.py  test_checkers_keywords.py  test_cli_smoke.py  test_dataset_manifest.py  test_eval_gate.py  (+16 more)
translation-flow/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
translation-flow/docs/: ecl-workflow-change-report.md  hf_ko_translation_best_practice.md  hf_translation_conventions.md  translation_prompt.md
translation-flow/manifests/: 2026-05-12-foundation-model-building-blocks.yaml  2026-05-15-granite-embedding-multilingual-r2.yaml  2026-06-17-agentic-resource-discovery-launch.yaml  example.yaml
translation-flow/scripts/: __init__.py  context_compression.py  create_translation_pr.py  ecl_translation_pipeline.py  translation_adapters.py
translation-flow/tests/: test_create_translation_pr.py
(+154 files in other folders)
