[project]
name = "translation-flow"
version = "0.1.0"
description = "Create Hugging Face Blog Korean translation PRs from RSS posts."
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12",
  "markdown-it-py>=3.0",
  "openai>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]