[project]
name = "seo-skills"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
# Lighthouse Tier-B heuristic benchmark (informational; the core gate never needs these)
benchmark = ["markdown>=3.4", "beautifulsoup4>=4.12"]
# Full offline test harness (bundles benchmark deps so every test runs, not skips)
dev = ["pytest>=8.0", "markdown>=3.4", "beautifulsoup4>=4.12"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
